test/spec_vectors/simd_bitwise/fail/module_16.wat
(module (func (result v128) (v128.andnot (i32.const 0) (i32.const 0))))